--- a/myproject/jumbotron/templates/stall2_page.html
+++ b/myproject/jumbotron/templates/stall2_page.html
@@ -79,6 +79,13 @@
       <div class="row">
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
+          <form action="action_page.php">
+            <p align="center">Item to add:<br></p>
+            <p align="center"><input type="text" name="firstname" value="Mickey"><br></p>
+            <p align="center">Item to remove:<br></p>
+            <p align="center"><input type="text" name="lastname" value="Mouse"><br><br></p>
+            <p align="center"><input type="submit" value="Submit"></p>
+          </form>
           <p>(WE NEED TO CREATE A FORM SUBMISSION HERE)</p>
         </div>
         <div class="col-md-4">
@@ -87,6 +94,13 @@
        </div>
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
+          <form action="action_page.php">
+            <p align="center">Item to add:<br></p>
+            <p align="center"><input type="text" name="firstname" value="Mickey"><br></p>
+            <p align="center">Item to remove:<br></p>
+            <p align="center"><input type="text" name="lastname" value="Mouse"><br><br></p>
+            <p align="center"><input type="submit" value="Submit"></p>
+          </form>
           <p>(WE NEED TO CREATE A FORM SUBMISSION HERE)</p>
         </div>
       </div>
