--- a/myproject/jumbotron/templates/stall1.html
+++ b/myproject/jumbotron/templates/stall1.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 
     <title>The Drunkards</title>
 
@@ -56,7 +56,7 @@
         <h1 align="center"><form action="/stall1" method="get">{{ stall_name }}</form></h1>
         <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
         <p align="left"> Menu:
-        <form action="/stall1" method="get"> <p align="right">{{ food_description }}</p> </form></p>
+        <form action="/stall1" method="get"> <p align="right">{{ food_info }}</p> </form></p>
       </div>
     </div>
 
@@ -65,14 +65,14 @@
       <div class="row">
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
-          <p><form action="/stall1_page" method="get">
-           <p align="right"><input type="text" name="description" value="{{ item_add }}"></p>
+          <p><form action="/stall1" method="get">
+           <p align="right">{{ item_add }}</p>
            </form>
         </div>
         <div class="col-md-4">
           <h2 align="center">Estimated waiting time (in minutes):</h2>
-          <p><form action="/stall1_page" method="get">
-           <p align="right"><input type="text" name="time" value="{{ waiting_time }}"></p>
+          <p><form action="/stall1" method="get">
+           <p align="right">{{ waiting_time }}</p>
           </form>
        </div>
         <div class="col-md-4">
@@ -93,9 +93,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
