--- a/myproject/jumbotron/templates/stall1_page.html
+++ b/myproject/jumbotron/templates/stall1_page.html
@@ -90,8 +90,13 @@
 
         <p align="right"> Delete Menu:
           <form action="/stall1_page" method="post">
-           <p align="right"><input type="text" value="{{ food_info }}"></p>
+          {% for items in food_info %}
+           <p align="right">
+           {{ items.descript }}: {{ items.price }}
+           <input type="radio" name="items" value="{{ items.descript }}">
+           </p>
            <p align="right"><input type="submit" name="menu_delete" value="delete"></p>
+          {% endfor %}
           </form>
         </p>
         </p>
@@ -104,7 +109,13 @@
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
           <p><form action="/stall1_page" method="post">
-           <p align="right"><input type="text" name="item_add"></p>
+           <p align="right"><select name=item_add>
+          {% for items in food_info %}
+           <option value="{{ items.descript }}">{{ items.descript }}
+          {% endfor %}      
+           </option></p>
+           </select>
+
            <p align="right"><input type="submit" name="item_add" value="add"></p>
            <p align="right"><input type="submit" name="queue_delete" value="delete">
           </form>
