--- a/myproject/jumbotron/templates/stall1.html
+++ b/myproject/jumbotron/templates/stall1.html
@@ -56,7 +56,13 @@
         <h1 align="center"><form action="/stall1" method="get">{{ stall_name }}</form></h1>
         <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
         <p align="left"> Menu:
-        <form action="/stall1" method="get"> <p align="right">{{ food_info }}</p> </form></p>
+          <form action="/stall1" method="get">
+          {% for items in food_info %}
+           <p align="right">
+           {{ items.descript }}: {{ items.price }}
+           </p>
+          {% endfor %}
+          </form>
       </div>
     </div>
 
@@ -65,9 +71,11 @@
       <div class="row">
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
+          {% for items in item_add %}
           <p><form action="/stall1" method="get">
-           <p align="right">{{ item_add }}</p>
+           <p align="right">{{ loop.index }}) {{ items }}</p>
            </form>
+          {% endfor %}
         </div>
         <div class="col-md-4">
           <h2 align="center">Estimated waiting time (in minutes):</h2>
