--- a/myproject/jumbotron/templates/stall1_page.html
+++ b/myproject/jumbotron/templates/stall1_page.html
@@ -73,7 +73,7 @@
         </form></p>
         <br>
         <p align="left"> Edit Header Here: </p>
-        <p align="left">(WE NEED TO CREATE A FORM SUBMISSION HERE) This is a web application for NUS Orbital 2016 Project Gemini.</p>
+        <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
         <p align="left"> Edit Menu Here: </p>
         <p align="left">
           <form action="/stall1_page" method="post">
