--- a/myproject/jumbotron/templates/stall2_page.html
+++ b/myproject/jumbotron/templates/stall2_page.html
@@ -109,7 +109,7 @@
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
           <p><form action="/stall2_page" method="post">
-           <p align="right"><select name=item_add2>
+           <p align="right"><select name=item_in_queue2>
           {% for items2 in food_info2 %}
            <option value="{{ items2.descript2 }}">{{ items2.descript2 }}
           {% endfor %}      
