--- a/myproject/jumbotron/templates/stall3_page.html
+++ b/myproject/jumbotron/templates/stall3_page.html
@@ -109,7 +109,7 @@
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
           <p><form action="/stall3_page" method="post">
-           <p align="right"><select name=item_add3>
+           <p align="right"><select name=item_in_queue3>
           {% for items3 in food_info3 %}
            <option value="{{ items3.descript3 }}">{{ items3.descript3 }}
           {% endfor %}      
