--- a/myproject/jumbotron/templates/about.html
+++ b/myproject/jumbotron/templates/about.html
@@ -54,8 +54,12 @@
     <div class="jumbotron">
       <div class="container">
         <h1 align="center">About</h1>
-        <p align="left">We are a team of 2 working on a web application for <a href="http://orbital.comp.nus.edu.sg/?p=45">NUS Orbital 2016 Project Gemini</a>. Our team comprises of Low Yee Seng & Khoong Wei Hao.
+        <p align="left">We are a team of 2 working on a web application for <a href="http://orbital.comp.nus.edu.sg/?p=45">NUS Orbital 2016 Project Gemini</a>. Our team comprises of Low Yee Seng & Khoong Wei Hao, from the Faculty of Science. 
         </p>
+        <p align="left">Do contact us at orbitalthedrunkards@gmail.com should you have any enquiries or feedback.
+        </p>
+
+        <hr>
 
       <footer>
         <p>&copy; The Drunkards || National University of Singapore || Orbital - Gemini</p>
