--- a/myproject/jumbotron/templates/stall2.html
+++ b/myproject/jumbotron/templates/stall2.html
@@ -85,7 +85,7 @@
        </div>
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
-          <p><form action="/stall2" method="get"> <p align="right">{{ stall_menu2 }}</p></form></p>
+          <p><form action="/stall2" method="get"> <p align="right">{{ special_offer2 }}</p></form></p>
         </div>
       </div>
 
