--- a/myproject/jumbotron/templates/stall2_page.html
+++ b/myproject/jumbotron/templates/stall2_page.html
@@ -130,8 +130,8 @@
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
           <p><form action="/stall2_page" method="post">
-           <p align="right"><input type="text" name="menu2" value="{{ stall_menu2 }}"></p>
-           <p align="right"><input type="submit" value="submit"></p>
+           <p align="right"><input type="text" name="offer2" value="{{ offer2 }}"></p>
+           <p align="right"><input type="submit" value="edit"></p>
           </form>
           </p>
         </div>
