--- a/myproject/jumbotron/templates/stall1.html
+++ b/myproject/jumbotron/templates/stall1.html
@@ -85,7 +85,7 @@
        </div>
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
-          <p><form action="/stall1" method="get"> <p align="right">{{ stall_menu }}</p></form></p>
+          <p><form action="/stall1" method="get"> <p align="right">{{ special_offer }}</p></form></p>
         </div>
       </div>
 
