--- a/myproject/jumbotron/templates/stall1_page.html
+++ b/myproject/jumbotron/templates/stall1_page.html
@@ -130,8 +130,8 @@
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
           <p><form action="/stall1_page" method="post">
-           <p align="right"><input type="text" name="menu" value="{{ stall_menu }}"></p>
-           <p align="right"><input type="submit" value="submit"></p>
+           <p align="right"><input type="text" name="offer" value="{{ offer }}"></p>
+           <p align="right"><input type="submit" value="edit"></p>
           </form>
           </p>
         </div>
