--- a/myproject/jumbotron/templates/stall3_page.html
+++ b/myproject/jumbotron/templates/stall3_page.html
@@ -130,8 +130,8 @@
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
           <p><form action="/stall3_page" method="post">
-           <p align="right"><input type="text" name="menu3" value="{{ stall_menu3 }}"></p>
-           <p align="right"><input type="submit" value="submit"></p>
+           <p align="right"><input type="text" name="offer3" value="{{ offer3 }}"></p>
+           <p align="right"><input type="submit" value="edit"></p>
           </form>
           </p>
         </div>
